fix(css): Adjust button width for better spacing

--- a/src/css/scarch.css
+++ b/src/css/scarch.css
@@ -19,5 +19,5 @@ input{
 
 button{
     height: 2rem;
-    width: 2em;
+    width: 2.5rem;
 }
